--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,27 +13,27 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-10-10 Tue 19:13]
+#+CAPTION: Clock summary at [2017-10-13 Fri 14:26]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *28:21* |       |      | 100.0 |
+| *Total time*                                                                | *30:25* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 28:21   |       |      | 100.0 |
-| Active                                                                      |         | 28:21 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 2:19 |   8.2 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:45 |   2.6 |
-| CANCELLED Add an "at" field to transform stats                              |         |       | 0:10 |   0.6 |
-| COMPLETED Move enablement into yarn                                         |         |       | 1:01 |   3.6 |
-| COMPLETED Consider revamping the project logo                               |         |       | 2:02 |   7.2 |
-| COMPLETED Rename top-level transformations                                  |         |       | 1:33 |   5.5 |
-| COMPLETED Clean-up context usage                                            |         |       | 0:38 |   2.2 |
-| COMPLETED Housekeeper should know of text models                            |         |       | 2:05 |   7.3 |
-| COMPLETED Rename the model to text transforms                               |         |       | 0:29 |   1.7 |
-| COMPLETED Rename kernel and family                                          |         |       | 2:44 |   9.6 |
-| COMPLETED Clean up formatter names                                          |         |       | 1:00 |   3.5 |
-| STARTED Create the archetype location properties                            |         |       | 7:06 |  25.0 |
-| STARTED Generate file paths as a transform                                  |         |       | 6:29 |  22.9 |
+| Stories                                                                     | 30:25   |       |      | 100.0 |
+| Active                                                                      |         | 30:25 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 2:19 |   7.6 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:45 |   2.5 |
+| CANCELLED Add an "at" field to transform stats                              |         |       | 0:10 |   0.5 |
+| COMPLETED Move enablement into yarn                                         |         |       | 1:01 |   3.3 |
+| COMPLETED Consider revamping the project logo                               |         |       | 2:02 |   6.7 |
+| COMPLETED Rename top-level transformations                                  |         |       | 1:33 |   5.1 |
+| COMPLETED Clean-up context usage                                            |         |       | 0:38 |   2.1 |
+| COMPLETED Housekeeper should know of text models                            |         |       | 2:05 |   6.8 |
+| COMPLETED Rename the model to text transforms                               |         |       | 0:29 |   1.6 |
+| COMPLETED Rename kernel and family                                          |         |       | 2:44 |   9.0 |
+| COMPLETED Clean up formatter names                                          |         |       | 1:00 |   3.3 |
+| STARTED Create the archetype location properties                            |         |       | 9:10 |  30.1 |
+| STARTED Generate file paths as a transform                                  |         |       | 6:29 |  21.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -396,6 +396,8 @@ that the "id" is in effect "archetype" in archetype location, but its
 slightly less confusing.
 
 *** STARTED Create the archetype location properties                  :story:
+    CLOCK: [2017-10-13 Fri 14:16]--[2017-10-13 Fri 14:26] =>  0:10
+    CLOCK: [2017-10-13 Fri 11:51]--[2017-10-13 Fri 13:45] =>  1:54
     CLOCK: [2017-10-10 Tue 18:42]--[2017-10-10 Tue 19:13] =>  0:31
     CLOCK: [2017-10-10 Tue 18:20]--[2017-10-10 Tue 18:41] =>  0:21
     CLOCK: [2017-10-10 Tue 07:11]--[2017-10-10 Tue 07:55] =>  0:44
@@ -440,6 +442,7 @@ Tasks:
   them. Place it prior to enablement.
 - update enablement to use the =archetype_location_properties= to
   populate its global and local caches.
+- add disable_facet_directories to locator properties?
 
 *** STARTED Generate file paths as a transform                        :story:
     CLOCK: [2017-09-22 Fri 09:41]--[2017-09-22 Fri 11:26] =>  1:45
