--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,30 +13,31 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-10-21 Sat 12:21]
+#+CAPTION: Clock summary at [2017-10-21 Sat 13:47]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *40:44* |       |       | 100.0 |
+| *Total time*                                                                | *41:20* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 40:44   |       |       | 100.0 |
-| Active                                                                      |         | 40:44 |       | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  2:19 |   5.7 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:05 |   2.7 |
+| Stories                                                                     | 41:20   |       |       | 100.0 |
+| Active                                                                      |         | 41:20 |       | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  2:19 |   5.6 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:05 |   2.6 |
 | CANCELLED Add an "at" field to transform stats                              |         |       |  0:10 |   0.4 |
 | COMPLETED Move enablement into yarn                                         |         |       |  1:01 |   2.5 |
-| COMPLETED Consider revamping the project logo                               |         |       |  2:02 |   5.0 |
+| COMPLETED Consider revamping the project logo                               |         |       |  2:02 |   4.9 |
 | COMPLETED Rename top-level transformations                                  |         |       |  1:33 |   3.8 |
-| COMPLETED Clean-up context usage                                            |         |       |  0:38 |   1.6 |
-| COMPLETED Housekeeper should know of text models                            |         |       |  2:05 |   5.1 |
+| COMPLETED Clean-up context usage                                            |         |       |  0:38 |   1.5 |
+| COMPLETED Housekeeper should know of text models                            |         |       |  2:05 |   5.0 |
 | COMPLETED Rename the model to text transforms                               |         |       |  0:29 |   1.2 |
-| COMPLETED Rename kernel and family                                          |         |       |  2:44 |   6.7 |
-| COMPLETED Clean up formatter names                                          |         |       |  1:00 |   2.5 |
+| COMPLETED Rename kernel and family                                          |         |       |  2:44 |   6.6 |
+| COMPLETED Clean up formatter names                                          |         |       |  1:00 |   2.4 |
 | COMPLETED Caching in travis                                                 |         |       |  0:59 |   2.4 |
-| COMPLETED Consider collapsing element properties into element               |         |       |  1:08 |   2.8 |
-| COMPLETED Create the archetype location properties                          |         |       | 13:58 |  34.3 |
+| COMPLETED Consider collapsing element properties into element               |         |       |  1:08 |   2.7 |
+| COMPLETED Create the archetype location properties                          |         |       | 13:58 |  33.8 |
 | COMPLETED Analysis work on moving to c++ 17                                 |         |       |  0:32 |   1.3 |
-| STARTED Generate file paths as a transform                                  |         |       |  9:01 |  22.1 |
+| COMPLETED Upgrade rtags to latest                                           |         |       |  0:36 |   1.5 |
+| STARTED Generate file paths as a transform                                  |         |       |  9:01 |  21.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -496,6 +497,13 @@ Tasks:
     CLOCK: [2017-10-21 Sat 11:49]--[2017-10-21 Sat 12:21] =>  0:32
 
 Have a quick go at bumping C++ standard version to 17 and see what breaks.
+
+*** COMPLETED Upgrade rtags to latest                                 :story:
+    CLOSED: [2017-10-21 Sat 13:46]
+    CLOCK: [2017-10-21 Sat 13:10]--[2017-10-21 Sat 13:46] =>  0:36
+
+We seem to be experiencing some random problems with rtags. Try
+getting latest and see if it gets better.
 
 *** STARTED Generate file paths as a transform                        :story:
     CLOCK: [2017-10-21 Sat 10:30]--[2017-10-21 Sat 11:27] =>  0:57
