--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,31 +13,32 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-10-21 Sat 22:32]
+#+CAPTION: Clock summary at [2017-10-27 Fri 13:10]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *41:40* |       |       | 100.0 |
+| *Total time*                                                                | *44:41* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 41:40   |       |       | 100.0 |
-| Active                                                                      |         | 41:40 |       | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  2:19 |   5.6 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:25 |   3.4 |
+| Stories                                                                     | 44:41   |       |       | 100.0 |
+| Active                                                                      |         | 44:41 |       | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  2:19 |   5.2 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:25 |   3.2 |
 | CANCELLED Add an "at" field to transform stats                              |         |       |  0:10 |   0.4 |
-| COMPLETED Move enablement into yarn                                         |         |       |  1:01 |   2.4 |
-| COMPLETED Consider revamping the project logo                               |         |       |  2:02 |   4.9 |
-| COMPLETED Rename top-level transformations                                  |         |       |  1:33 |   3.7 |
-| COMPLETED Clean-up context usage                                            |         |       |  0:38 |   1.5 |
-| COMPLETED Housekeeper should know of text models                            |         |       |  2:05 |   5.0 |
-| COMPLETED Rename the model to text transforms                               |         |       |  0:29 |   1.2 |
-| COMPLETED Rename kernel and family                                          |         |       |  2:44 |   6.6 |
-| COMPLETED Clean up formatter names                                          |         |       |  1:00 |   2.4 |
-| COMPLETED Caching in travis                                                 |         |       |  0:59 |   2.4 |
-| COMPLETED Consider collapsing element properties into element               |         |       |  1:08 |   2.7 |
-| COMPLETED Create the archetype location properties                          |         |       | 13:58 |  33.5 |
-| COMPLETED Analysis work on moving to c++ 17                                 |         |       |  0:32 |   1.3 |
-| COMPLETED Upgrade rtags to latest                                           |         |       |  0:36 |   1.4 |
-| STARTED Generate file paths as a transform                                  |         |       |  9:01 |  21.6 |
+| COMPLETED Move enablement into yarn                                         |         |       |  1:01 |   2.3 |
+| COMPLETED Consider revamping the project logo                               |         |       |  2:02 |   4.6 |
+| COMPLETED Rename top-level transformations                                  |         |       |  1:33 |   3.5 |
+| COMPLETED Clean-up context usage                                            |         |       |  0:38 |   1.4 |
+| COMPLETED Housekeeper should know of text models                            |         |       |  2:05 |   4.7 |
+| COMPLETED Rename the model to text transforms                               |         |       |  0:29 |   1.1 |
+| COMPLETED Rename kernel and family                                          |         |       |  2:44 |   6.1 |
+| COMPLETED Clean up formatter names                                          |         |       |  1:00 |   2.2 |
+| COMPLETED Caching in travis                                                 |         |       |  0:59 |   2.2 |
+| COMPLETED Consider collapsing element properties into element               |         |       |  1:08 |   2.5 |
+| COMPLETED Create the archetype location properties                          |         |       | 13:58 |  31.3 |
+| COMPLETED Analysis work on moving to c++ 17                                 |         |       |  0:32 |   1.2 |
+| COMPLETED Upgrade rtags to latest                                           |         |       |  0:36 |   1.3 |
+| COMPLETED Experiment with adding colour to dia diagrams                     |         |       |  3:01 |   6.8 |
+| STARTED Generate file paths as a transform                                  |         |       |  9:01 |  20.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -505,6 +506,23 @@ Have a quick go at bumping C++ standard version to 17 and see what breaks.
 
 We seem to be experiencing some random problems with rtags. Try
 getting latest and see if it gets better.
+
+*** COMPLETED Experiment with adding colour to dia diagrams           :story:
+    CLOSED: [2017-10-27 Fri 13:10]
+    CLOCK: [2017-10-27 Fri 10:09]--[2017-10-27 Fri 13:10] =>  3:01
+
+As per this paper, using colours in diagrams could be useful:
+
+- [[http://www.robwortham.com/wp-content/uploads/2016/05/ICAPS-2016-PlanRob-Instinct-Planner.pdf][Instinct: A Biologically Inspired Reactive Planner for Embedded
+  Environments]]
+
+It was mentioned in this discussion:
+
+- https://mail.gnome.org/archives/dia-list/2016-September/msg00021.html
+
+Play around with creating a script that updates diagrams with a
+palette of colours so that we can distinguish between the different
+meta-types.
 
 *** STARTED Generate file paths as a transform                        :story:
     CLOCK: [2017-10-21 Sat 10:30]--[2017-10-21 Sat 11:27] =>  0:57
