--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,32 +13,34 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-10-27 Fri 13:10]
+#+CAPTION: Clock summary at [2017-10-31 Tue 19:33]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *44:41* |       |       | 100.0 |
+| *Total time*                                                                | *46:11* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 44:41   |       |       | 100.0 |
-| Active                                                                      |         | 44:41 |       | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  2:19 |   5.2 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:25 |   3.2 |
+| Stories                                                                     | 46:11   |       |       | 100.0 |
+| Active                                                                      |         | 46:11 |       | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  2:19 |   5.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:25 |   3.1 |
 | CANCELLED Add an "at" field to transform stats                              |         |       |  0:10 |   0.4 |
-| COMPLETED Move enablement into yarn                                         |         |       |  1:01 |   2.3 |
-| COMPLETED Consider revamping the project logo                               |         |       |  2:02 |   4.6 |
-| COMPLETED Rename top-level transformations                                  |         |       |  1:33 |   3.5 |
+| COMPLETED Move enablement into yarn                                         |         |       |  1:01 |   2.2 |
+| COMPLETED Consider revamping the project logo                               |         |       |  2:02 |   4.4 |
+| COMPLETED Rename top-level transformations                                  |         |       |  1:33 |   3.4 |
 | COMPLETED Clean-up context usage                                            |         |       |  0:38 |   1.4 |
-| COMPLETED Housekeeper should know of text models                            |         |       |  2:05 |   4.7 |
-| COMPLETED Rename the model to text transforms                               |         |       |  0:29 |   1.1 |
-| COMPLETED Rename kernel and family                                          |         |       |  2:44 |   6.1 |
+| COMPLETED Housekeeper should know of text models                            |         |       |  2:05 |   4.5 |
+| COMPLETED Rename the model to text transforms                               |         |       |  0:29 |   1.0 |
+| COMPLETED Rename kernel and family                                          |         |       |  2:44 |   5.9 |
 | COMPLETED Clean up formatter names                                          |         |       |  1:00 |   2.2 |
-| COMPLETED Caching in travis                                                 |         |       |  0:59 |   2.2 |
+| COMPLETED Caching in travis                                                 |         |       |  0:59 |   2.1 |
 | COMPLETED Consider collapsing element properties into element               |         |       |  1:08 |   2.5 |
-| COMPLETED Create the archetype location properties                          |         |       | 13:58 |  31.3 |
+| COMPLETED Create the archetype location properties                          |         |       | 13:58 |  30.2 |
 | COMPLETED Analysis work on moving to c++ 17                                 |         |       |  0:32 |   1.2 |
 | COMPLETED Upgrade rtags to latest                                           |         |       |  0:36 |   1.3 |
-| COMPLETED Experiment with adding colour to dia diagrams                     |         |       |  3:01 |   6.8 |
-| STARTED Generate file paths as a transform                                  |         |       |  9:01 |  20.2 |
+| COMPLETED Experiment with adding colour to dia diagrams                     |         |       |  3:01 |   6.5 |
+| STARTED Generate file paths as a transform                                  |         |       |  9:01 |  19.5 |
+| STARTED Experiment with a database model                                    |         |       |  1:20 |   2.9 |
+| STARTED Move artefact into yarn                                             |         |       |  0:10 |   0.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -845,6 +847,27 @@ different top-level directories), which is nice.
 We should check that =enable_unique_file_names= is set to true.
 
 Key: =quilt.cpp.flat_directory_mode.enabled=.
+
+*** STARTED Experiment with a database model                          :story:
+    CLOCK: [2017-10-31 Tue 18:01]--[2017-10-31 Tue 18:45] =>  0:44
+    CLOCK: [2017-10-31 Tue 08:22]--[2017-10-31 Tue 08:58] =>  0:36
+
+Try to create a dogen model to store documents in a relational
+database in a de-normalised representation. We should also store the
+original representation supplied by the user as well as support
+versioning.
+
+Actions:
+
+- put workspace, delete workspace, get workspaces
+- put input, delete input, get inputs
+- put request for generating output, delete output, get outputs
+
+*** STARTED Move artefact into yarn                                   :story:
+    CLOCK: [2017-10-31 Tue 18:45]--[2017-10-31 Tue 18:55] =>  0:10
+
+Originally we had placed artefact in the formatters model, but now
+that we have text models, it makes more sense to have it in yarn.
 
 *** Split registrar into two classes                                  :story:
 
