--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,34 +13,34 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-11-02 Thu 09:05]
+#+CAPTION: Clock summary at [2017-11-02 Thu 09:17]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *46:52* |       |       | 100.0 |
+| *Total time*                                                                | *47:03* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 46:52   |       |       | 100.0 |
-| Active                                                                      |         | 46:52 |       | 100.0 |
+| Stories                                                                     | 47:03   |       |       | 100.0 |
+| Active                                                                      |         | 47:03 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  2:19 |   4.9 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:49 |   3.9 |
 | CANCELLED Add an "at" field to transform stats                              |         |       |  0:10 |   0.4 |
 | COMPLETED Move enablement into yarn                                         |         |       |  1:01 |   2.2 |
 | COMPLETED Consider revamping the project logo                               |         |       |  2:02 |   4.3 |
 | COMPLETED Rename top-level transformations                                  |         |       |  1:33 |   3.3 |
-| COMPLETED Clean-up context usage                                            |         |       |  0:38 |   1.4 |
+| COMPLETED Clean-up context usage                                            |         |       |  0:38 |   1.3 |
 | COMPLETED Housekeeper should know of text models                            |         |       |  2:05 |   4.4 |
 | COMPLETED Rename the model to text transforms                               |         |       |  0:29 |   1.0 |
 | COMPLETED Rename kernel and family                                          |         |       |  2:44 |   5.8 |
 | COMPLETED Clean up formatter names                                          |         |       |  1:00 |   2.1 |
 | COMPLETED Caching in travis                                                 |         |       |  0:59 |   2.1 |
 | COMPLETED Consider collapsing element properties into element               |         |       |  1:08 |   2.4 |
-| COMPLETED Create the archetype location properties                          |         |       | 13:58 |  29.8 |
+| COMPLETED Create the archetype location properties                          |         |       | 13:58 |  29.7 |
 | COMPLETED Analysis work on moving to c++ 17                                 |         |       |  0:32 |   1.1 |
 | COMPLETED Upgrade rtags to latest                                           |         |       |  0:36 |   1.3 |
 | COMPLETED Experiment with adding colour to dia diagrams                     |         |       |  3:01 |   6.4 |
 | STARTED Generate file paths as a transform                                  |         |       |  9:01 |  19.2 |
 | STARTED Experiment with a database model                                    |         |       |  1:20 |   2.8 |
-| STARTED Move artefact into yarn                                             |         |       |  0:27 |   1.0 |
+| STARTED Move artefact into yarn                                             |         |       |  0:38 |   1.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -865,6 +865,7 @@ Actions:
 - put request for generating output, delete output, get outputs
 
 *** STARTED Move artefact into yarn                                   :story:
+    CLOCK: [2017-11-02 Thu 09:06]--[2017-11-02 Thu 09:17] =>  0:11
     CLOCK: [2017-11-02 Thu 09:01]--[2017-11-02 Thu 09:05] =>  0:04
     CLOCK: [2017-11-02 Thu 08:47]--[2017-11-02 Thu 09:00] =>  0:13
     CLOCK: [2017-10-31 Tue 18:45]--[2017-10-31 Tue 18:55] =>  0:10
