--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,16 +13,16 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-11-02 Thu 19:39]
+#+CAPTION: Clock summary at [2017-11-03 Fri 09:25]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *48:01* |       |       | 100.0 |
+| *Total time*                                                                | *48:41* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 48:01   |       |       | 100.0 |
-| Active                                                                      |         | 48:01 |       | 100.0 |
+| Stories                                                                     | 48:41   |       |       | 100.0 |
+| Active                                                                      |         | 48:41 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  2:19 |   4.8 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:49 |   3.8 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:49 |   3.7 |
 | CANCELLED Add an "at" field to transform stats                              |         |       |  0:10 |   0.3 |
 | COMPLETED Move enablement into yarn                                         |         |       |  1:01 |   2.1 |
 | COMPLETED Consider revamping the project logo                               |         |       |  2:02 |   4.2 |
@@ -30,17 +30,17 @@
 | COMPLETED Clean-up context usage                                            |         |       |  0:38 |   1.3 |
 | COMPLETED Housekeeper should know of text models                            |         |       |  2:05 |   4.3 |
 | COMPLETED Rename the model to text transforms                               |         |       |  0:29 |   1.0 |
-| COMPLETED Rename kernel and family                                          |         |       |  2:44 |   5.7 |
+| COMPLETED Rename kernel and family                                          |         |       |  2:44 |   5.6 |
 | COMPLETED Clean up formatter names                                          |         |       |  1:00 |   2.1 |
 | COMPLETED Caching in travis                                                 |         |       |  0:59 |   2.0 |
-| COMPLETED Consider collapsing element properties into element               |         |       |  1:08 |   2.4 |
-| COMPLETED Create the archetype location properties                          |         |       | 13:58 |  29.1 |
+| COMPLETED Consider collapsing element properties into element               |         |       |  1:08 |   2.3 |
+| COMPLETED Create the archetype location properties                          |         |       | 13:58 |  28.7 |
 | COMPLETED Analysis work on moving to c++ 17                                 |         |       |  0:32 |   1.1 |
 | COMPLETED Upgrade rtags to latest                                           |         |       |  0:36 |   1.2 |
-| COMPLETED Experiment with adding colour to dia diagrams                     |         |       |  3:01 |   6.3 |
-| COMPLETED Move artefact into yarn                                           |         |       |  1:36 |   3.3 |
-| STARTED Generate file paths as a transform                                  |         |       |  9:01 |  18.8 |
-| STARTED Experiment with a database model                                    |         |       |  1:20 |   2.8 |
+| COMPLETED Experiment with adding colour to dia diagrams                     |         |       |  3:01 |   6.2 |
+| COMPLETED Move artefact into yarn                                           |         |       |  2:16 |   4.7 |
+| STARTED Generate file paths as a transform                                  |         |       |  9:01 |  18.5 |
+| STARTED Experiment with a database model                                    |         |       |  1:20 |   2.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -529,6 +529,7 @@ meta-types.
 
 *** COMPLETED Move artefact into yarn                                 :story:
     CLOSED: [2017-11-02 Thu 19:39]
+    CLOCK: [2017-11-03 Fri 08:45]--[2017-11-03 Fri 09:25] =>  0:40
     CLOCK: [2017-11-02 Thu 18:41]--[2017-11-02 Thu 19:39] =>  0:58
     CLOCK: [2017-11-02 Thu 09:06]--[2017-11-02 Thu 09:17] =>  0:11
     CLOCK: [2017-11-02 Thu 09:01]--[2017-11-02 Thu 09:05] =>  0:04
